[gd_scene load_steps=14 format=3 uid="uid://bfob6608nomq0"]

[ext_resource type="Script" path="res://levels/turtle_habitat/high_voltage_lamp.gd" id="1_066fx"]
[ext_resource type="Texture2D" uid="uid://1rejncqm42bg" path="res://levels/turtle_habitat/sprites/interactables/lamp_on.png" id="1_psxym"]
[ext_resource type="Shader" path="res://levels/turtle_habitat/high_voltage_lamp.gdshader" id="2_5ylw8"]
[ext_resource type="Texture2D" uid="uid://5upgyudi5aob" path="res://levels/turtle_habitat/sprites/interactables/lamp.png" id="2_w5rlq"]
[ext_resource type="Texture2D" uid="uid://daj5oertrswkm" path="res://levels/turtle_habitat/sprites/interactables/electric_particle.png" id="4_jb8ml"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sfilt"]
shader = ExtResource("2_5ylw8")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 6.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_acgwi"]
size = Vector2(279, 168)

[sub_resource type="Animation" id="Animation_eajj2"]
resource_name = "HitFromLeft"
length = 1.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, -2, -2, -2, -2, -2, -2, -2, 1),
"update": 0,
"values": [0.0, -0.20944, 0.20944, -0.139626, 0.139626, -0.0698132, 0.0698132, -0.0349066, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1_psxym"), ExtResource("2_w5rlq"), ExtResource("1_psxym"), ExtResource("2_w5rlq"), ExtResource("1_psxym"), ExtResource("2_w5rlq"), ExtResource("1_psxym"), ExtResource("2_w5rlq"), ExtResource("1_psxym")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:use_parent_material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_65fjm"]
resource_name = "Fall"
length = 5.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 2.5, 3, 3.5, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 180), Vector2(0, 180), Vector2(0, 580), Vector2(50, 613.333), Vector2(100, 646.667), Vector2(175, 680), Vector2(200, 780)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.8, 0.85, 0.9, 0.95, 1.2, 1.6, 1.65, 1.7, 1.75, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1_psxym"), ExtResource("2_w5rlq"), ExtResource("1_psxym"), ExtResource("2_w5rlq"), ExtResource("1_psxym"), ExtResource("2_w5rlq"), ExtResource("1_psxym"), ExtResource("2_w5rlq"), ExtResource("1_psxym"), ExtResource("2_w5rlq"), ExtResource("1_psxym"), ExtResource("2_w5rlq"), ExtResource("1_psxym"), ExtResource("2_w5rlq"), ExtResource("1_psxym"), ExtResource("2_w5rlq"), ExtResource("1_psxym"), ExtResource("2_w5rlq"), ExtResource("1_psxym"), ExtResource("2_w5rlq")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.7, 2, 2.5, 4),
"transitions": PackedFloat32Array(1, -2, -2, -2, -2, 0.5, -2, 1, 1, 1),
"update": 0,
"values": [0.0, 0.10472, -0.10472, 0.10472, -0.10472, 0.10472, -0.10472, 0.0, 0.0, 0.349066]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(4, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:use_parent_material")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_y8m2d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_psxym")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:use_parent_material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:material:shader_parameter/line_thickness")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 180)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_m0tl0"]
resource_name = "HitFromRight"
length = 1.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, -2, -2, -2, -2, -2, -2, -2, 1),
"update": 0,
"values": [0.0, 0.20944, -0.20944, 0.139626, -0.139626, 0.0698132, -0.0698132, 0.0349066, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1_psxym"), ExtResource("2_w5rlq"), ExtResource("1_psxym"), ExtResource("2_w5rlq"), ExtResource("1_psxym"), ExtResource("2_w5rlq"), ExtResource("1_psxym"), ExtResource("2_w5rlq"), ExtResource("1_psxym")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:use_parent_material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8fk3g"]
resource_name = "Indication"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:use_parent_material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/line_thickness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 8.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_us5n0"]
_data = {
"Fall": SubResource("Animation_65fjm"),
"HitFromLeft": SubResource("Animation_eajj2"),
"HitFromRight": SubResource("Animation_m0tl0"),
"Indication": SubResource("Animation_8fk3g"),
"RESET": SubResource("Animation_y8m2d")
}

[node name="HighVoltageLamp" type="Node2D"]
position = Vector2(0, 18)
script = ExtResource("1_066fx")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_sfilt")
use_parent_material = true
scale = Vector2(0.9, 0.9)
texture = ExtResource("1_psxym")
offset = Vector2(0, 180)

[node name="ElectricParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, 152)
emitting = false
amount = 4
explosiveness = 0.5
lifetime_randomness = 0.25
texture = ExtResource("4_jb8ml")
direction = Vector2(0, 1)
spread = 55.0
gravity = Vector2(0, 125)
initial_velocity_min = 100.0
initial_velocity_max = 175.0
angle_max = 20.0
scale_amount_min = 0.4
scale_amount_max = 0.4

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 67)
shape = SubResource("RectangleShape2D_acgwi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_us5n0")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
